--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -45,10 +45,10 @@
 }
 
 .dark-background {
-  --background-color: #040b14;
+  --background-color: #ffffff;
   --default-color: #ffffff;
   --heading-color: #ffffff;
-  --surface-color: #151f2b;
+  --surface-color:#ffffff;  
   --contrast-color: #ffffff;
 }
 
