--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -33,7 +33,7 @@
 }
 
 .dark-background {
-  --background-color: #040b14;
+  --background-color: red;
   --default-color: #ffffff;
   --heading-color: #ffffff;
   --surface-color: #151f2b;
