--- a/asset/css/umarBelieve.css
+++ b/asset/css/umarBelieve.css
@@ -39,7 +39,7 @@ section{
   left: 0;
   width: 100%;
   padding: 2rem 9%;
-  background: var(--bg-color);
+  /* background: var(--bg-color); */
   display: flex;
   justify-content: space-between;
   align-items: center;
